# CS-Checklist

./: .gitignore  CS_Checklist.xlsx  README.md  SETUP.md  app_old.js  pyproject.toml  requirements.txt  test.ipynb  vercel.json
api/: index.py
static/: app.js  index.html  styles.css  summary.html  summary.js
