[project]
name = "cs-checklist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "openpyxl>=3.1.2",
    "firebase-admin>=6.4.0",
    "python-dotenv>=1.0.0",
]
